--- a/Counselor/scss/navs/_sidebar.scss
+++ b/Counselor/scss/navs/_sidebar.scss
@@ -1,4 +1,9 @@
 // Sidebar
+   .logo {
+       text-decoration: none;
+       font-weight: 800;
+   }
+
 .sidebar {
     width: $sidebar-collapsed-width;
     min-height: 100vh;
@@ -129,13 +134,15 @@
         }
     }
 
+ 
+
     .sidebar-brand {
         height: $topbar-base-height;
         text-decoration: none;
         font-size: 1rem;
         font-weight: 800;
         padding: 1.5rem 1rem;
-        text-align: center;
+        text-align: left;
         text-transform: uppercase;
         letter-spacing: 0.05rem;
         z-index: 1;
